# file-uploader

./: .gitignore  README.md  docker-compose.yml  flow.md  uploads.json
.github/workflows/: backend.yml  frontend.yml  full-stack.yml
frontend/: config.js  index.html  server.py  upload.html  upload.js
keycloak/: realm-export.json
upload-proxy/: Cargo.toml  Dockerfile  uploads.json
upload-proxy/src/: auth.rs  handlers.rs  main.rs  metadata.rs  uploads.json
