[package]
name = "upload-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
actix-multipart = "0.7"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"